United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6968053 (launcher) hide exceptions under certain launcher failures
6968053 : (launcher) hide exceptions under certain launcher failures

Details
Type:
Bug
Submit Date:
2010-07-09
Status:
Closed
Updated Date:
2011-05-25
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
tools
OS:
generic
Sub-Component:
launcher
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
7

Related Reports
Relates:

Sub Tasks

Description
The launcher tends to print the entire exception trace when it cannot find
the necessary class etc. Though it is somewhat useful for debugging it is
much too verbose, for the average user.

% java MissingClass
Exception in thread "main" java.lang.NoClassDefFoundError: MissingClass
Caused by: java.lang.ClassNotFoundException: MissingClass
        at java.net.URLClassLoader$1.run(URLClassLoader.java:200)
        at java.security.AccessController.doPrivileged(Native Method)
        at java.net.URLClassLoader.findClass(URLClassLoader.java:188)
        at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
        at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
        at java.lang.ClassLoader.loadClass(ClassLoader.java:252)
        at java.lang.ClassLoader.loadClassInternal(ClassLoader.java:320)
Could not find the main class: MissingClass.  Program will exit.

                                    

Comments
EVALUATION

Needs to be investigated as previous version also dumped the entire stack trace.
                                     
2010-07-09



Hardware and Software, Engineered to Work Together