6968053: (launcher) hide exceptions under certain launcher failures Reviewed-by: mchung